# symphony-neocloud-bridge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.codex/skills/: cloud-symphony  runpod-symphony
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: architecture.md  aws-runpod-superpowers.md  discovery.md  manifest-migration-guide.md  neocloud-self-learning-runbook.md  private-source-storage-runbook.md  product-brief.md  provider-adapter-contract.md  public-release-checklist.md  remote-smoke-runbook.md  runpod-observability-ladder.md  runpod-official-surfaces.md  runpod-status-taxonomy.md  runpod-superpowers-2026-05.md  runpod-worker-readiness.md
docs/providers/: aws.md  bio-inference.md  huggingface.md  lambda.md  modal.md  neoclouds.md  notebook-compute.md  runpod.md
examples/aws-orchestrated/: launch_manifest.json
examples/cheap-pod/: launch_manifest.json
examples/hf-job/: launch_manifest.json
examples/huge-sharded/: launch_manifest.json
examples/proxy-matrix/: launch_manifest.json  linear_issue.md
examples/public-smoke/: launch_manifest.json
examples/runpod-network-volume-s3/: launch_manifest.json
examples/small-cpu/: launch_manifest.json
logs/: 2026-04-30-public-readiness.md
skills/cloud-symphony/: SKILL.md
skills/cloud-symphony/agents/: openai.yaml
skills/cloud-symphony/assets/templates/: linear-runpod-issue.md  runpod-launch-manifest.template.json  symphony-outcome.md
skills/cloud-symphony/references/: cli-reference.md  contract-checklist.md  failure-playbook.md  provider-backed-workload-lessons.md  runpod-operations.md  self-learning.md  worker-readiness.md
skills/runpod-symphony/: SKILL.md
skills/runpod-symphony/agents/: openai.yaml
skills/runpod-symphony/assets/templates/: linear-runpod-issue.md
skills/runpod-symphony/references/: cli-reference.md  contract-checklist.md  failure-playbook.md  runpod-operations.md  worker-readiness.md
src/cloud_bridge/: __init__.py  aws_orchestration.py  bootstrap_requirements.py  cli.py  closeout.py  contract.py  cost.py  dashboard.py  doctor.py  handoff.py  launch_env.py  learnings.py  linear_api.py  linear_issue.py  local_run.py  manifest.py  manifest_audit.py  monitor.py  packet.py  payload.py  preflight.py  productivity.py  progress_report.py  proxy.py  public_readiness.py  recovery.py  registry_auth.py  remote_outcome.py  remote_run.py  source_archive.py  source_check.py  source_ingress.py  startup.py  supervisor.py  util.py
src/cloud_bridge/providers/: __init__.py  base.py  capabilities.py  registry.py
src/cloud_bridge/providers/aws/: __init__.py  adapter.py
src/cloud_bridge/providers/beam/: __init__.py  adapter.py
src/cloud_bridge/providers/boltz/: __init__.py  adapter.py
src/runpod_bridge/: __init__.py  bootstrap_requirements.py  cli.py  closeout.py  contract.py  cost.py  dashboard.py  doctor.py  egress.py  handoff.py  local_run.py  manifest.py  monitor.py  orchestrator.py  packet.py  preflight.py  productivity.py  profiles.py  providers.py  proxy.py  public_readiness.py  recovery.py  remote_run.py  runpod_rest.py  runpodctl.py  source_check.py  startup.py  supervisor.py
templates/: linear-runpod-issue.md  runpod-launch-manifest.template.json  symphony-outcome.md
tests/: test_bridge_cli.py  test_hf_jobs.py  test_learnings.py  test_provider_gate.py  test_public_audit_templates.py  test_recovery_dashboard.py  test_source_archive_url_env.py
(+30 files in other folders)
