[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony-runpod-bridge"
version = "0.1.0"
description = "Local-first RunPod execution bridge for Symphony and Linear"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["runpod", "symphony", "linear", "codex", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
runpod-bridge = "runpod_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
